--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             </div>
                             <div class="px-2">
                                 <h6 class="mb-0">Telegram</h6>
-                                <a target="_blank" href="https://telegram.org/F_Rasa0118">My Telegram</a>
+                                <a target="_blank" href="https://t.me/F_Rasa0118">My Telegram</a>
                             </div>
                         </div>
                     </div>
